--- a/app/src/main/res/layout/task_list.xml
+++ b/app/src/main/res/layout/task_list.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="5dp"
     android:id="@+id/cardView"
-    card_view:cardCornerRadius="10dp"
+    app:cardCornerRadius="10dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:card_view="http://schemas.android.com/apk/res-auto">
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,25 +24,31 @@
                 app:layout_constraintBottom_toBottomOf="parent" />
             <TextView
                 android:id="@+id/listItemTextField"
-                android:layout_width="240dp"
+                android:layout_width="300dp"
                 android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="10dp"
                 android:textSize="@dimen/text_size_of_tasks"
                 android:shadowColor="@color/black"
                 android:shadowDx="1.5"
                 android:shadowDy="1.3"
+                android:textColor="@color/white"
                 android:text="@string/task_placeholder"
-                app:layout_constraintEnd_toStartOf="@+id/alarmTimeDisplay"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/checkBox_complete"/>
             <TextView
                 android:id="@+id/alarmTimeDisplay"
-                android:layout_width="50dp"
+                android:layout_width="70dp"
                 android:layout_marginEnd="3dp"
                 android:layout_height="wrap_content"
+                android:text=""
+                android:textColor="@color/white"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"/>
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/listItemTextField"/>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
