--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,9 @@
     <color name="green">#00FF00</color>
     <color name="dark_green">#006400</color>
     <color name="yellow">#FFFF00</color>
+    <color name="pale_yellow">#E8A317</color>
     <color name="purple">#630063</color>
+    <color name="dark_orange">#FF8C00</color>
+    <color name="orange">#FFA500</color>
+
 </resources>
